Add phone call functionality to hostel cards
Implemented phone call buttons for each hostel card in homefragment.java, allowing users to directly call hostels. Updated homefragment.xml to include corresponding buttons and added necessary permissions in AndroidManifest.xml. This enhances user interaction by providing quick access to hostel contact numbers.

--- a/app/src/main/res/layout/homefragment.xml
+++ b/app/src/main/res/layout/homefragment.xml
@@ -514,6 +514,7 @@
                                 android:gravity="center">
 
                                 <com.google.android.material.button.MaterialButton
+                                    android:id="@+id/callNowBtn1"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
@@ -1432,6 +1433,7 @@
                                 android:gravity="center">
 
                                 <com.google.android.material.button.MaterialButton
+                                    android:id="@+id/callNowBtn3"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
@@ -1890,6 +1892,7 @@
                                 android:gravity="center">
 
                                 <com.google.android.material.button.MaterialButton
+                                    android:id="@+id/callNowBtn4"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
@@ -2348,6 +2351,7 @@
                                 android:gravity="center">
 
                                 <com.google.android.material.button.MaterialButton
+                                    android:id="@+id/callNowBtn5"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
