--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="blue">#1E88E5</color>
     <color name="dark_blue">#0D47A1</color>
 
-    <color name="white">#FFFFFF</color>
+    <color name="white">#FAF9F9</color>
     <color name="splash_bg_color">#FFFFFF</color>
 
 
