--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- OTP Input Style -->
     <style name="OtpEditTextStyle">
         <item name="android:layout_width">60dp</item>
@@ -11,6 +11,6 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/dark_blue</item>
         <item name="android:background">@drawable/otp_input_background</item>
-        <item name="android:importantForAutofill">no</item>
+        <item name="android:importantForAutofill" tools:ignore="NewApi">no</item>
     </style>
 </resources>
