--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/nav_notification"
-        android:icon="@drawable/notification"
+        android:icon="@drawable/ic_notification"
         android:title="@string/notification" />
 
     <item
