--- a/app/src/main/res/drawable/bg_notification_item.xml
+++ b/app/src/main/res/drawable/bg_notification_item.xml
@@ -2,9 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFFFFF"/>
+    <!-- Light blue background -->
+    <solid android:color="@color/light_blue_bg"/>
+
     <corners android:radius="12dp"/>
+
+    <!-- Dark blue border -->
     <stroke
         android:width="1dp"
-        android:color="#E0E0E0"/>
+        android:color="@color/dark_blue"/>
 </shape>
