--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="text_gray">#757575</color>
     <color name="button_blue">#1565C0</color>
     <color name="blue_light">#90CAF9</color>
-
+    <color name="light_blue_bg">#E3F2FD</color>
 </resources>
