--- a/app/src/main/res/layout/item_hostel.xml
+++ b/app/src/main/res/layout/item_hostel.xml
@@ -36,7 +36,7 @@
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textSize="13sp"
-                android:background="@drawable/rating_badge"
+                android:background="@color/dark_blue"
                 android:padding="8dp"
                 android:layout_gravity="top|end"
                 android:layout_margin="12dp"/>
@@ -49,7 +49,7 @@
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textSize="11sp"
-                android:background="@drawable/type_badge"
+                android:background="@color/dark_blue"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:paddingTop="5dp"
