Refactor hostel data and UI; add profile background
Hostel data in searchfragment now uses HostelModel objects with local drawable images. Updated HostelAdapter and HostelModel for better type safety and local image support. Improved homefragment UI with a clickable profile image and rounded backgrounds, added profile_circle_background drawable, and enhanced header and splash backgrounds for a more polished look. Removed HostelSeeder activity from AndroidManifest.xml.

--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- White Background -->
+    <!-- White background with rounded corners -->
     <item>
-        <color android:color="#FFFFFF"/>
+        <shape android:shape="rectangle">
+            <solid android:color="#FFFFFF"/>
+            <corners
+                android:topLeftRadius="32dp"
+                android:topRightRadius="32dp"
+                android:bottomLeftRadius="32dp"
+                android:bottomRightRadius="32dp"/>
+        </shape>
     </item>
 
     <!-- Logo in center -->
     <item
         android:width="150dp"
         android:height="150dp"
-        android:drawable="@drawable/host_logo_02"
-        android:gravity="center"/>
+        android:gravity="center">
+        <bitmap
+            android:src="@drawable/host_logo_02"
+            android:gravity="center"/>
+    </item>
 
 </layer-list>
