--- a/app/src/main/res/drawable/header_gradient_background.xml
+++ b/app/src/main/res/drawable/header_gradient_background.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:shape="rectangle"
+    tools:ignore="ExtraText">
+
+    <!-- Gradient background with dark blue, white, and black -->
     <gradient
-        android:type="linear"
-        android:angle="135"
-        android:startColor="#1976D2"
-        android:centerColor="#1E88E5"
-        android:endColor="#2196F3"/>
+        android:startColor="@color/dark_blue"  <!-- Dark Blue -->
+    android:centerColor="#FFFFFF" <!-- White in the middle -->
+    android:endColor="#000000"    <!-- Black -->
+    android:angle="270"/>         <!-- Top to bottom gradient -->
+
+    <!-- Rounded bottom corners -->
+    <corners
+        android:topLeftRadius="0dp"
+        android:topRightRadius="0dp"
+        android:bottomLeftRadius="60dp"
+        android:bottomRightRadius="60dp"/>
 </shape>
