--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -26,7 +26,7 @@
             android:id="@+id/notif1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_notification_item"
+            android:background="@drawable/button_border"
             android:orientation="horizontal"
             android:padding="12dp"
             android:layout_marginBottom="12dp"
@@ -75,7 +75,7 @@
             android:id="@+id/notif2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_notification_item"
+            android:background="@drawable/button_border"
             android:orientation="horizontal"
             android:padding="12dp"
             android:layout_marginBottom="12dp"
@@ -124,7 +124,7 @@
             android:id="@+id/notif3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_notification_item"
+            android:background="@drawable/button_border"
             android:orientation="horizontal"
             android:padding="12dp"
             android:clickable="true"
